# pip-module-demo

./: .gitignore  Cargo.toml  get_latest_version.py  pyproject.toml  requirements.txt  setup.py
.cargo/: config
.github/workflows/: publish-package.yml  run-tests.yml
deadbear_fib_rs/: __init__.py  config_number_command.py  counter.py  fib_number_adapter.py  fib_number_command.py  lib.rs  object_interface.py
scripts/: run_tests.sh
src/: lib.rs
src/class_module/: fib_processor.rs
src/fib_calcs/: fib_number.rs  fib_numbers.rs
src/interface/: config.rs  object.rs
