[tool.poetry]
name = "deadbear-fib-rs"
version = "0.1.0"
description = ""
authors = ["Sean Baier <sean.t.baier@gmail.com>"]
readme = "README.md"
packages = [{include = "deadbear_fib_rs"}]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"
